' Generated by UML Generator
' Encoded: rLfBRzj64BxxL_18nrBGNeNMY6qfY874KIorFHH5iIBNqjRaKkN3iPiclxspJ-vZICiEqgA71EBiSFQRdTbvqQ-QbjHjLnP7pItZUrAJCiaAqZHdRLkpJTVIowpYA_ONJRuxsh6S9Xchiu8U7KckvABYRKsoDlbqb2JJJ3zTvhE4yLQGMjOMT9QiG1hVkZnpqWBzRPMHGlmKIu2bxPgP5RgIpsA5LorjC2bNNRcXjRiY5KA4KvuZr3jIT40xPzivpLX92ecPrgMtsnJ-Ep6eqa3BIUBfE4a6D9madXOzdw_39C4qc2Gn_aaIeGSiBlPZWHjsO7V0dXxFahkAvO8ck1WNH0-Jmr5JJZ-cy6-1x0ladyEj3tlNuMBDcK16quh7J9kgAYZXWczBMtFqSbEXXsUlaprWRo_vJMLL_6pySyrAskmerGxQcaV7G_UqPbM-4eSUE8TQ0IK6_DGAxnsL0b0c3lGjQzeVBCC2o0-doO_Yv9ApkYOFSlqq5HQQrlGF2aTHyMjAcegxdaVBVL4zK3YTXVubWTMLU6EMBDKFwwDsmpJKT9BWUXgwhwLqGan7vL5vBXLAXROF3e-aEYRs6IsIZrLz6_dKhkhgnlVb3IiAiX5NIxj3S8KybokhEnflvh0qtQPahNiBo1uEyiwx6CeKQUqPmba7PrnNBIdU2BIn9yBokGQDStmXRKkotVkFdDPfR5omHc1QP-yHDxye66YjWx3yxJWu9wKNWHdFkqOQpe-d8XG5h9gyA0ah4FfoLt6FNwCt_gzr67Hy5LSbtjI33OPsa4oI4B8AdW5WI_JWMge7zjX45hshE59rN88gf0gALUoas-VWfHTAKlgrctitH1zIEc9vWAHYfLwIVkMTy2F-iOHuJpXeQXnDkSe60lKDQvS5yO8EuRmZnLjAxkY73hpTUfAqLoJB-h4rtWshc-1q04P0eVv1xLXDew3Ga888gtjH8GOzIL38niZd_HkOLTrbH7XWXs0Znt5g-cT7crQkfJbvQC8851j8oJG7kNxO1su71v5rXVIySazvGqIM28AADV8b1vcPDYrJ3sELc6OPASIqn94wZ9HLnzkmW99-ebzEVIHHjOIZY8gbU2DjNGYamF-whaea-JcvQPBKSWkqOYb9VRiIKIYWBGdBNLf6U4QBmQ99-8V4YMQ6A_6MRz_6K8SaZjnfA8POBXr2MRn_bi7rooTXHPPzJeHVmkMwglXLLnIfBXhNufhI8dSl9Uon7dZr76x4hNdN60KJO9L30T0jaJKVKhbYmlpSUO107NvYIUeIH2A4hxslSqZ6XrVTc7XjhqZ-IWQmQyAtD8MAUuN4ivBSn-J8sdCApLbRsYoVs-UHJ6y2iyd79j0C9kHzrJ3XGJQ1w-V15o0JaAreNjpoL5x_7d0QOVNJkmdJSuVjiNpSQ297pI0Bpp0xzHZZkd4WaxaIcuPj-JkbRXgf7QHqVMofEKz8wleN7lalJD3GEezSUmYhug9xTJbTt6TqRqF1oJXF2jG6uFVdRuMBuXKeWRYGEYBWJ1wJi64W0raO4QCLSFBFW8eenuZWUGLL1mza1SJ7SRa3YW5WECk8QECWwdeRnndBtmMzervLZWOOTKllyOMSDbdDzif5Wtb7vCH36Tp30V7i2M5kaY08J3nOYssYQp_lNqYnbzq1Wzhmagluss1HrXaqg6hmQoFsWVC8sQegMxlzgdX6scD1ZXfaMS67BJ9QfVcpWM_QalS7gHhWI4PGOPbsEQoyHCc1B85R3BVU2wMIdpj-qPh9biavJt0FTmD_u1IMQlqjLVrM7ysK2ObzNWsC7tkE1Jg8h67xztnfUi1dJu0YWEauDgYiHv11qOpXGiOK_-BU1urDUZ-y1YafAihnAyNQ8r_AeTZ1HU7pnfhzTlEkjgsThbJLeEYmAcQiyrSgwwoY7aOgne64yBIXkcaVzTvz-xZfyYsDkaKr-Pdf8POMS7C3M_j3Zlwu1ijHCr8tzQl9meClwExJyEjoOf3TDfRHX7TynXNCU0QcNCZXF-Lh07hi4BAZGpS9TcdGF5PjRytuLv13gvgycUreti5LUyQTqNCO2JH5y3eD-4uaPWq6LJYgsKUka0enJZY8FEq9Of18zJNXRn1DdaTVelfFPduVyd_yPDNhefK8vaXsAeLCvKL2f_d02EPBOyQzgHzndFOTjhCt-ffcLPsZiwJ3Gk_PVgzQ0ZiK46r6IkgjrVRNttfHKyicPQxK9w7KizGWznAGmphoPK0VfZ_upVhk18thPXslLRpFeV_H57XCWtuLkLR19yKuyvxG-nOyrzwTnxzZ6jR34lytcmAJJQE-nIlB-nQtxhA-VBTOlLairh-l5Xz-MbnTB6R9MLkLBBlaBTtIsYGobvP-V-pMeau14HbPTgOafj7m6n9YQfdxqKOr7gJuGx2PCo3po-tcoKN4SvFyVt8JZWFl2PFvwwueq8GklrD5tRMYUb22xal3YjefKID8T75hvZRMuZgDDi_ASeTDqBAQWk1-xXzs0K_xw7tiHFXlTr5Lba5x92JZExcfSIUaAUxwJlZl__AXcaw3kOEp-08MRMFfaqrhgJykLmuf_fuudVvzsWiodw9UlZnrpjIPOLVkjW7Ttd27xi5yP0GgeGGplQDeieboOUDBb75qG3dsni3e47qb7ZPunu0lMnFfna_GT6TbI8ubdThINRKbc4lKodgqthY6Aank8KRLX-ycblp2DRj7TSAwfUFulUKUboKBOEPmNa62xyhY7m
' URL: http://www.plantuml.com/plantuml/uml/rLfBRzj64BxxL_18nrBGNeNMY6qfY874KIorFHH5iIBNqjRaKkN3iPiclxspJ-vZICiEqgA71EBiSFQRdTbvqQ-QbjHjLnP7pItZUrAJCiaAqZHdRLkpJTVIowpYA_ONJRuxsh6S9Xchiu8U7KckvABYRKsoDlbqb2JJJ3zTvhE4yLQGMjOMT9QiG1hVkZnpqWBzRPMHGlmKIu2bxPgP5RgIpsA5LorjC2bNNRcXjRiY5KA4KvuZr3jIT40xPzivpLX92ecPrgMtsnJ-Ep6eqa3BIUBfE4a6D9madXOzdw_39C4qc2Gn_aaIeGSiBlPZWHjsO7V0dXxFahkAvO8ck1WNH0-Jmr5JJZ-cy6-1x0ladyEj3tlNuMBDcK16quh7J9kgAYZXWczBMtFqSbEXXsUlaprWRo_vJMLL_6pySyrAskmerGxQcaV7G_UqPbM-4eSUE8TQ0IK6_DGAxnsL0b0c3lGjQzeVBCC2o0-doO_Yv9ApkYOFSlqq5HQQrlGF2aTHyMjAcegxdaVBVL4zK3YTXVubWTMLU6EMBDKFwwDsmpJKT9BWUXgwhwLqGan7vL5vBXLAXROF3e-aEYRs6IsIZrLz6_dKhkhgnlVb3IiAiX5NIxj3S8KybokhEnflvh0qtQPahNiBo1uEyiwx6CeKQUqPmba7PrnNBIdU2BIn9yBokGQDStmXRKkotVkFdDPfR5omHc1QP-yHDxye66YjWx3yxJWu9wKNWHdFkqOQpe-d8XG5h9gyA0ah4FfoLt6FNwCt_gzr67Hy5LSbtjI33OPsa4oI4B8AdW5WI_JWMge7zjX45hshE59rN88gf0gALUoas-VWfHTAKlgrctitH1zIEc9vWAHYfLwIVkMTy2F-iOHuJpXeQXnDkSe60lKDQvS5yO8EuRmZnLjAxkY73hpTUfAqLoJB-h4rtWshc-1q04P0eVv1xLXDew3Ga888gtjH8GOzIL38niZd_HkOLTrbH7XWXs0Znt5g-cT7crQkfJbvQC8851j8oJG7kNxO1su71v5rXVIySazvGqIM28AADV8b1vcPDYrJ3sELc6OPASIqn94wZ9HLnzkmW99-ebzEVIHHjOIZY8gbU2DjNGYamF-whaea-JcvQPBKSWkqOYb9VRiIKIYWBGdBNLf6U4QBmQ99-8V4YMQ6A_6MRz_6K8SaZjnfA8POBXr2MRn_bi7rooTXHPPzJeHVmkMwglXLLnIfBXhNufhI8dSl9Uon7dZr76x4hNdN60KJO9L30T0jaJKVKhbYmlpSUO107NvYIUeIH2A4hxslSqZ6XrVTc7XjhqZ-IWQmQyAtD8MAUuN4ivBSn-J8sdCApLbRsYoVs-UHJ6y2iyd79j0C9kHzrJ3XGJQ1w-V15o0JaAreNjpoL5x_7d0QOVNJkmdJSuVjiNpSQ297pI0Bpp0xzHZZkd4WaxaIcuPj-JkbRXgf7QHqVMofEKz8wleN7lalJD3GEezSUmYhug9xTJbTt6TqRqF1oJXF2jG6uFVdRuMBuXKeWRYGEYBWJ1wJi64W0raO4QCLSFBFW8eenuZWUGLL1mza1SJ7SRa3YW5WECk8QECWwdeRnndBtmMzervLZWOOTKllyOMSDbdDzif5Wtb7vCH36Tp30V7i2M5kaY08J3nOYssYQp_lNqYnbzq1Wzhmagluss1HrXaqg6hmQoFsWVC8sQegMxlzgdX6scD1ZXfaMS67BJ9QfVcpWM_QalS7gHhWI4PGOPbsEQoyHCc1B85R3BVU2wMIdpj-qPh9biavJt0FTmD_u1IMQlqjLVrM7ysK2ObzNWsC7tkE1Jg8h67xztnfUi1dJu0YWEauDgYiHv11qOpXGiOK_-BU1urDUZ-y1YafAihnAyNQ8r_AeTZ1HU7pnfhzTlEkjgsThbJLeEYmAcQiyrSgwwoY7aOgne64yBIXkcaVzTvz-xZfyYsDkaKr-Pdf8POMS7C3M_j3Zlwu1ijHCr8tzQl9meClwExJyEjoOf3TDfRHX7TynXNCU0QcNCZXF-Lh07hi4BAZGpS9TcdGF5PjRytuLv13gvgycUreti5LUyQTqNCO2JH5y3eD-4uaPWq6LJYgsKUka0enJZY8FEq9Of18zJNXRn1DdaTVelfFPduVyd_yPDNhefK8vaXsAeLCvKL2f_d02EPBOyQzgHzndFOTjhCt-ffcLPsZiwJ3Gk_PVgzQ0ZiK46r6IkgjrVRNttfHKyicPQxK9w7KizGWznAGmphoPK0VfZ_upVhk18thPXslLRpFeV_H57XCWtuLkLR19yKuyvxG-nOyrzwTnxzZ6jR34lytcmAJJQE-nIlB-nQtxhA-VBTOlLairh-l5Xz-MbnTB6R9MLkLBBlaBTtIsYGobvP-V-pMeau14HbPTgOafj7m6n9YQfdxqKOr7gJuGx2PCo3po-tcoKN4SvFyVt8JZWFl2PFvwwueq8GklrD5tRMYUb22xal3YjefKID8T75hvZRMuZgDDi_ASeTDqBAQWk1-xXzs0K_xw7tiHFXlTr5Lba5x92JZExcfSIUaAUxwJlZl__AXcaw3kOEp-08MRMFfaqrhgJykLmuf_fuudVvzsWiodw9UlZnrpjIPOLVkjW7Ttd27xi5yP0GgeGGplQDeieboOUDBb75qG3dsni3e47qb7ZPunu0lMnFfna_GT6TbI8ubdThINRKbc4lKodgqthY6Aank8KRLX-ycblp2DRj7TSAwfUFulUKUboKBOEPmNa62xyhY7m
' Generated on: 2026-03-31T21:22:10.018106

@startuml
skinparam classAttributeIconSize 0
hide circle

class Contract {
  -contractId: int
  -title: String
  -contractDate: LocalDate
  -status: ContractStatus
  -notes: String
  -contractNumber: String
  -startDate: LocalDate
  -endDate: LocalDate
  -value: BigDecimal
  -terms: String
  --
  +Contract(contractId: int, title: String, contractDate: LocalDate, notes: String, contractNumber: String, startDate: LocalDate, endDate: LocalDate, value: BigDecimal, terms: String)
  +activate(): void
  +terminate(notes: String): void
  +renew(newEndDate: LocalDate, newValue: BigDecimal): void
  +renew(newEndDate: LocalDate): void
  +isActive(onDate: LocalDate): boolean
  +getContractValue(): BigDecimal
  +printInfo(): void
}

class Timesheet {
  -timesheetId: int
  -periodStart: LocalDate
  -periodEnd: LocalDate
  -status: TimesheetStatus
  -entries: List<TimesheetEntry> = new ArrayList<>()
  -rejectionReason: String
  -employee: Employee
  -project: Project
  --
  +Timesheet(timesheetId: int, periodStart: LocalDate, periodEnd: LocalDate, status: TimesheetStatus)
  +addEntry(entry: TimesheetEntry): void
  +addEntry(entryId: int, workDate: LocalDate, hours: BigDecimal, billable: boolean, notes: String): void
  +removeEntry(entryId: int): void
  +submit(): void
  +approve(): void
  +reject(reason: String): void
  +getTotalHours(): BigDecimal
  +getBillableHours(): BigDecimal
  ~attachOwner(employee: Employee, project: Project): void
  +printInfo(): void
}

class Client {
  -clientId: int
  -name: String
  -industry: String
  -contactName: String
  -contactEmail: String
  -contactPhone: String
  -projects: List<Project> = new ArrayList<>()
  --
  +Client(clientId: int, name: String, industry: String, contactName: String, contactEmail: String, contactPhone: String)
  +getClientId(): int
  +getName(): String
  +updateContact(contactName: String, contactEmail: String, contactPhone: String): void
  +addProject(project: Project): void
  +getActiveProjects(): List<Project>
  +printInfo(): void
}

class PermanentEmployee {
  -benefitPlan: String
  -annualLeaveQuota: int
  --
  +PermanentEmployee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: LocalDate, salary: BigDecimal, benefitPlan: String, annualLeaveQuota: int)
  +getBenefitPlan(): String
  +updateBenefitPlan(benefitPlan: String): void
  +getAnnualLeaveQuota(): int
  +requestLeave(days: int): void
  +printInfo(): void
  +getEmployeeType(): String
  +calculateCompensation(): BigDecimal
}

class Invoice {
  -invoiceId: int
  -title: String
  -invoiceDate: LocalDate
  -status: InvoiceStatus
  -notes: String
  -amount: BigDecimal
  --
  +Invoice(invoiceId: int, title: String, invoiceDate: LocalDate, notes: String, amount: BigDecimal)
  +generateFromTimesheet(timesheet: Timesheet, rate: BigDecimal): void
  +markSent(): void
  +markPaid(): void
  +cancel(notes: String): void
  +getAmount(): BigDecimal
  +getNotes(): String
  +setNotes(notes: String): void
  +printInfo(): void
}

class Department {
  -departmentId: int
  -name: String
  -employees: List<Employee> = new ArrayList<>()
  -positions: List<Position> = new ArrayList<>()
  -manager: Employee
  --
  +Department(departmentId: int, name: String)
  +getDepartmentId(): int
  +getName(): String
  +setName(name: String): void
  +addEmployee(employee: Employee): void
  +removeEmployee(employeeId: int): void
  +assignManager(manager: Employee): void
  +addPosition(position: Position): void
  +getEmployeeCount(): int
  +printInfo(): void
}

class Position {
  -positionId: int
  -title: String
  -level: String
  -minSalary: BigDecimal
  -maxSalary: BigDecimal
  -description: String
  --
  +Position(positionId: int, title: String, level: String, minSalary: BigDecimal, maxSalary: BigDecimal, description: String)
  +getTitle(): String
  +setDescription(description: String): void
  +isSalaryInRange(salary: BigDecimal): boolean
  +updateSalaryRange(minSalary: BigDecimal, maxSalary: BigDecimal): void
  +printInfo(): void
}

class TimesheetEntry {
  -entryId: int
  -workDate: LocalDate
  -hours: BigDecimal
  -billable: boolean
  -notes: String
  --
  +TimesheetEntry(entryId: int, workDate: LocalDate, hours: BigDecimal, billable: boolean, notes: String)
  +updateHours(hours: BigDecimal): void
  +markBillable(): void
  +markNonBillable(): void
  +getHours(): BigDecimal
  +getEntryId(): int
  +getWorkDate(): LocalDate
  +isBillable(): boolean
  +getNotes(): String
}

class ProjectAssignment {
  -assignmentStartDate: LocalDate
  -assignmentEndDate: LocalDate
  -roleOnProject: String
  -employee: Employee
  -project: Project
  --
  +ProjectAssignment(assignmentStartDate: LocalDate, assignmentEndDate: LocalDate, roleOnProject: String, project: Project)
  +ProjectAssignment(assignmentStartDate: LocalDate, assignmentEndDate: LocalDate, roleOnProject: String, employee: Employee, project: Project)
  +updateRole(roleOnProject: String): void
  +updateAssignmentPeriod(startDate: LocalDate, endDate: LocalDate): void
  +isActive(onDate: LocalDate): boolean
  +getAssignmentDuration(): int
  ~attachEmployee(employee: Employee): void
  +printInfo(): void
}

class Project {
  -projectId: int
  -name: String
  -description: String
  -startDate: LocalDate
  -endDate: LocalDate
  -status: ProjectStatus
  -budget: BigDecimal
  -client: Client
  -staffing: List<ProjectAssignment> = new ArrayList<>()
  -contracts: List<Contract> = new ArrayList<>()
  -invoices: List<Invoice> = new ArrayList<>()
  -timesheets: List<Timesheet> = new ArrayList<>()
  --
  +Project(projectId: int, name: String, description: String, startDate: LocalDate, endDate: LocalDate, status: ProjectStatus, budget: BigDecimal)
  +getProjectId(): int
  +getName(): String
  +getStatus(): ProjectStatus
  +updateSchedule(startDate: LocalDate, endDate: LocalDate): void
  +updateBudget(budget: BigDecimal): void
  +changeStatus(status: ProjectStatus): void
  +assignEmployee(employee: Employee, role: String): ProjectAssignment
  +assignEmployee(employee: Employee, roleOnProject: String, assignmentStartDate: LocalDate, assignmentEndDate: LocalDate): ProjectAssignment
  +addContract(contract: Contract): void
  +addContract(contractId: int, title: String, contractDate: LocalDate, notes: String, contractNumber: String, startDate: LocalDate, endDate: LocalDate, value: BigDecimal, terms: String): Contract
  +addInvoice(invoice: Invoice): void
  +getTotalBilledAmount(): BigDecimal
  ~setClient(client: Client): void
  ~addTimesheetRecord(timesheet: Timesheet): void
  +printInfo(): void
}

class ContractEmployee {
  -contractStartDate: LocalDate
  -contractEndDate: LocalDate
  --
  +ContractEmployee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: LocalDate, salary: BigDecimal, contractStartDate: LocalDate, contractEndDate: LocalDate)
  +getContractDuration(): int
  +extendContract(newEndDate: LocalDate): void
  +isContractActive(onDate: LocalDate): boolean
  +printInfo(): void
  +getEmployeeType(): String
  +calculateCompensation(): BigDecimal
}

abstract class Employee {
  -{static} TIMESHEET_SEQUENCE: AtomicInteger = new AtomicInteger(1)
  -employeeId: int
  -firstName: String
  -lastName: String
  -email: String
  -hireDate: LocalDate
  -salary: BigDecimal
  -position: Position
  -department: Department
  -assignments: List<ProjectAssignment> = new ArrayList<>()
  -timesheets: List<Timesheet> = new ArrayList<>()
  --
  +Employee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: LocalDate, salary: BigDecimal)
  +getEmployeeId(): int
  +getFullName(): String
  +getEmail(): String
  +setEmail(email: String): void
  +getHireDate(): LocalDate
  +getSalary(): BigDecimal
  +updateSalary(newSalary: BigDecimal): void
  +assignPosition(position: Position): void
  +createTimesheet(project: Project, periodStart: LocalDate, periodEnd: LocalDate): Timesheet
  +printInfo(): void
  +getEmployeeType(): String
  +calculateCompensation(): BigDecimal
  ~addAssignment(assignment: ProjectAssignment): void
  ~setDepartment(department: Department): void
}

Timesheet o-- TimesheetEntry
Timesheet *-- Employee
Timesheet *-- Project
Client o-- Project
PermanentEmployee --|> Employee
Invoice ..> Timesheet
Department o-- Employee
Department o-- Position
Department *-- Employee
ProjectAssignment *-- Employee
ProjectAssignment *-- Project
Project *-- Client
Project o-- ProjectAssignment
Project o-- Contract
Project o-- Invoice
Project o-- Timesheet
Project ..> Employee
ContractEmployee --|> Employee
Employee *-- Position
Employee *-- Department
Employee o-- ProjectAssignment
Employee o-- Timesheet
Employee ..> Project
@enduml